[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/delegates/Selectable.gd" type="Script" id=1]

[node name="Selectable" type="Area2D"]
collision_layer = 256
collision_mask = 0
script = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Selectable_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Selectable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Selectable_mouse_exited"]
